@@ -1,21 +1,0 @@
-<Project Sdk="Microsoft.NET.Sdk">
-
-	<PropertyGroup>
-		<OutputType>Exe</OutputType>
-		<TargetFramework>net6.0</TargetFramework>
-
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
-		<CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
-		<TreatWarningsAsErrors>True</TreatWarningsAsErrors>
-		<NoWarn>1591</NoWarn>
-
-		<LangVersion>latest</LangVersion>
-		<WarningLevel>9999</WarningLevel>
-	</PropertyGroup>
-
-	<ItemGroup>
-	  <ProjectReference Include="..\Prometheus.AspNetCore\Prometheus.AspNetCore.csproj" />
-	</ItemGroup>
-
-</Project>
