@@ -43,8 +43,8 @@ internal static class Program
         });
 
         // Metrics published in this sample:
-        // * built-in process metrics giving basic information about the .NET runtime.
-        // * the sample counter defined above.
+        // * built-in process metrics giving basic information about the .NET runtime (enabled by default)
+        // * the sample counter defined above
         Console.WriteLine("Open http://localhost:1234/metrics in a web browser.");
         Console.WriteLine("Press enter to exit.");
         Console.ReadLine();
